Updated version of website

--- a/activity.html
+++ b/activity.html
@@ -51,11 +51,12 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a class="" href="index.html#home-page">home</a></li>
-                                        <li><a href="index.html#about-me">About Us</a></li>
+                                        <li><a href="index.html#industries">Industries</a></li>
                                         <li><a href="index.html#services">Services</a></li>
-                                        <li><a href="index.html#popular-projects">Products</a></li>
+                                        <li><a href="index.html#products">Products</a></li>
                                         <li><a href="index.html#projects">Projects</a></li>
-                                        <li><a href="index.html#popular-courses">Blog</a></li>
+                                        <li><a href="index.html#blog">Blog</a></li>
+                                        <li><a href="index.html#about-me">About</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -274,7 +275,7 @@
                                 Company
                             </h3>
                             <ul>
-                                <li><a href="#about-me">About Us</a></li>
+                                <li><a href="index.html#about-me">About Us</a></li>
                             </ul>
 
                         </div>
@@ -285,7 +286,7 @@
                                 Resources
                             </h3>
                             <ul>
-                                <li><a href="#popular-courses"> Articles</a></li>
+                                <li><a href="index.html#blog"> Articles</a></li>
                             </ul>
                         </div>
                     </div>
