--- a/rlsoft.html
+++ b/rlsoft.html
@@ -51,10 +51,12 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a class="" href="index.html#home-page">home</a></li>
-                                        <li><a href="index.html#about-me">About Us</a></li>
+                                        <li><a href="index.html#industries">Industries</a></li>
                                         <li><a href="index.html#services">Services</a></li>
-                                        <li><a href="index.html#popular-projects">Products</a></li>
-                                        <li><a href="index.html#popular-courses">Blog</a></li>
+                                        <li><a href="index.html#products">Products</a></li>
+                                        <li><a href="index.html#projects">Projects</a></li>
+                                        <li><a href="index.html#blog">Blog</a></li>
+                                        <li><a href="index.html#about-me">About</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -93,21 +95,18 @@
                     <div class="col-xl-16 col-md-12">
                         <div class="slider_info">
                             <h3> RLSoft</h3>
-                            <h2> Our software helps businesses to easily <strong> <a id="doc" href=""><b> experiment and
-                                            apply Reinforcement Learning </b></a> </strong>to solve their core problems
-                                before spending a lot of investments.
-                            </h2>
+                            <h2> Our software helps businesses to easily <strong> <a id="doc" href=""><b> experiment and apply Reinforcement Learning </b></a> </strong>to solve their core problems before spending a lot of investments. 
+                                </h2>
 
-                            <p></p><br>
+                                <p></p><br>
 
-                            <h2> It allows one to easily <strong> <a id="doc" href=""><b> deploy trained RL models in
-                                            production with a single click </b></a> </strong>!</h2>
+                            <h2> It allows one to easily <strong> <a id="doc" href=""><b> deploy trained RL models in production with a single click </b></a> </strong>!</h2>
 
-
+                                 
                         </div>
                     </div>
 
-                    <!-- <div class="col-xl-10 col-md-6">
+                      <!-- <div class="col-xl-10 col-md-6">
 
                         <div class="col-sm"></div>
                         <div class="col-sm text-center">
@@ -149,88 +148,46 @@
                             </ul> -->
                             <!--<h6>Disclaimer: The views expressed in this article are those of the Author's. They do not necessarily reflect the views of his employer. </h6> -->
 
-                            <p>
-                            <p style="font-weight:bolder;"></p>
-                            <font size="4">
-                                Imagine reducing operational costs, maximizing efficiency, and staying ahead of market
-                                trends - all made possible with our Reinforcement Learning platform.
-                            </font>
 
-                            </p>
 
+                            <!-- Introduction -->
                             <!-- for spacing -->
                             <div class="">
                                 <p></p><br>
                                 <p></p>
                             </div> <!-- for spacing  -->
-
-
-
-                            <h2> 🚀 Why Our Product Stands Out</h2>
+                            <!-- <h2>What?</h2> -->
                             <p>
-                            <p style="font-weight:bolder;"></p>
-                            <font size="4">
-                                The sofware can act as a <strong> <a id="doc" href=""><b>key tool to speed up your AI
-                                            adoption</b></a> </strong> to solve problems such as
-                                <strong> <a id="doc" href=""><b> supply-chain optimization, supply-demand matching,
-                                            pricing optimization, energy optimization, critical decision making, etc.
-                                        </b></a> </strong>!
-                            </font>
+                                <p style="font-weight:bolder;"></p>
+                                <font size="4">
+                                    The sofware can act as a <strong> <a id="doc" href=""><b>key tool to speed up your AI adoption</b></a> </strong> for sectors involving 
+                                <strong> <a id="doc" href=""><b> optimization, supply-chain, insurance pricing and critical decision taking problems</b></a> </strong>!
+                                </font>
 
 
-                            <div class="col-md-10 mt-sm-30">
-                                <div class="">
-                                    <ul class="unordered-list">
-                                        <p style="font-weight:bolder;"></p>
-                                        <font size="4">
-                                            <li>Easy RL experimentation with your own<strong> <a id="streamlit"
-                                                        href="#"><b>Digital Twin or Dataset</b></a>
-                                                </strong></li>
-                                            <li> Enable your Business Team to experiment Business strategies without
-                                                deep RL training</li>
-                                            <!-- <li> Easy deployment to <strong> <a id="heroku"
-                                                            href="#"><b>AWS</b></a>
-                                                    </strong> for production consumption</li> -->
-                                            <li> Ability to deploy in scale as <strong> <a id="heroku" href="#"><b>AWS
-                                                            SageMaker Models</b></a>
+                                <div class="col-md-10 mt-sm-30">
+                                    <div class="">
+                                        <ul class="unordered-list">
+                                            <p style="font-weight:bolder;"></p>
+                                            <font size="4">
+                                                <li>Easy RL experimentation with your own<strong> <a id="streamlit"
+                                                            href="https://www.streamlit.io"><b>Digital Twin or Dataset</b></a>
+                                                    </strong></li>
+                                                <li> Enable your Business Team to experiment Business strategies without deep RL training</li>
+                                                <li> Easy deployment to <strong> <a id="heroku"
+                                                            href="https://www.heroku.com"><b>AWS</b></a>
+                                                    </strong> for production consumption</li>
+                                                <li> Ability to Integrate with <strong> <a id="heroku"
+                                                        href="https://aws.amazon.com/pm/sagemaker/?trk=13ea9a0c-44a8-4207-97d1-d0125804ec5a&sc_channel=ps&ef_id=CjwKCAjw15eqBhBZEiwAbDomEintZx17Yjk22uje1_fEML3kmi4520NEiD4a99WzyJmYzKMPHQkSxhoCst8QAvD_BwE:G:s&s_kwcid=AL!4422!3!646134679856!p!!g!!aws%20sagemaker!19610627692!145752810219"><b>SageMaker RL</b></a>
                                                 </strong> for production consumption.</li>
 
 
-                                        </font>
-                                    </ul>
+                                            </font>
+                                        </ul>
+                                    </div>
                                 </div>
-                            </div>
                             </p>
 
-                            <!-- for spacing -->
-                            <div class="">
-                                <p></p><br>
-                                <p></p>
-                            </div> <!-- for spacing  -->
-
-
-                            <h2> 💡 Ideal For</h2>
-                            <div class="col-md-10 mt-sm-30">
-                                <div class="">
-                                    <ul class="unordered-list">
-                                        <p style="font-weight:bolder;"></p>
-                                        <font size="4">
-                                            <li> Companies exploring <strong><a href="#"><b>AI-driven
-                                                            optimization.</b></a></strong></li>
-                                            <li> Teams seeking to improve <strong><a href="#"><b>decision-making
-                                                            processes.</b></a></strong></li>
-                                            <li> Businesses aiming to <strong><a href="#"><b>stay ahead in dynamic
-                                                            environments.</b></a></strong></li>
-                                        </font>
-                                    </ul>
-                                </div>
-                            </div>
-
-
-
-
-
-
 
 
 
@@ -240,7 +197,7 @@
                                 <p></p><br>
                                 <p></p>
                             </div> <!-- for spacing  -->
-
+            
 
                             <!-- for spacing -->
                             <div class="">
@@ -269,8 +226,8 @@
                                 <p></p>
                             </div> <!-- for spacing  -->
                             <div class="col-sm text-center">
-                                <a href="index.html#popular-projects" class="boxed_btn">
-                                    <h3>Checkout More Projects</h3>
+                                <a href="index.html#products" class="boxed_btn">
+                                    <h3>Checkout More Products</h3>
                                 </a>
                             </div>
 
@@ -290,7 +247,7 @@
 
 
 
-
+ 
 
 
 
@@ -320,7 +277,7 @@
                                 Company
                             </h3>
                             <ul>
-                                <li><a href="#about-me">About Us</a></li>
+                                <li><a href="index.html#about-me">About Us</a></li>
                             </ul>
 
                         </div>
@@ -331,7 +288,7 @@
                                 Resources
                             </h3>
                             <ul>
-                                <li><a href="#popular-courses"> Articles</a></li>
+                                <li><a href="index.html#blog"> Articles</a></li>
                             </ul>
                         </div>
                     </div>
