--- a/coral.html
+++ b/coral.html
@@ -51,10 +51,12 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a class="" href="index.html#home-page">home</a></li>
-                                        <li><a href="index.html#about-me">About Us</a></li>
+                                        <li><a href="index.html#industries">Industries</a></li>
                                         <li><a href="index.html#services">Services</a></li>
-                                        <li><a href="index.html#popular-projects">Products</a></li>
-                                        <li><a href="index.html#popular-courses">Blog</a></li>
+                                        <li><a href="index.html#products">Products</a></li>
+                                        <li><a href="index.html#projects">Projects</a></li>
+                                        <li><a href="index.html#blog">Blog</a></li>
+                                        <li><a href="index.html#about-me">About</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -301,7 +303,7 @@
                         <!-- Read More Articles -->
                         <!-- for spacing --> <div class=""><p></p><br><p></p></div> <!-- for spacing  -->
                         <div class="col-sm text-center">
-                        <a href="index.html#popular-courses" class="boxed_btn"><h3>Read More Articles</h3></a>
+                        <a href="index.html#blog" class="boxed_btn"><h3>Read More Articles</h3></a>
                         </div>
 
                       
@@ -347,7 +349,7 @@
                                  Company
                              </h3>
                              <ul>
-                                 <li><a href="#about-me">About Us</a></li>
+                                 <li><a href="index.html#about-me">About Us</a></li>
                              </ul>
  
                          </div>
@@ -358,7 +360,7 @@
                                  Resources
                              </h3>
                              <ul>
-                                 <li><a href="#popular-courses"> Articles</a></li>
+                                 <li><a href="index.html#blog"> Articles</a></li>
                              </ul>
                          </div>
                      </div>
