--- a/education.html
+++ b/education.html
@@ -51,10 +51,12 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a class="" href="index.html#home-page">home</a></li>
-                                        <li><a href="index.html#about-me">About Us</a></li>
+                                        <li><a href="index.html#industries">Industries</a></li>
                                         <li><a href="index.html#services">Services</a></li>
-                                        <li><a href="index.html#popular-projects">Products</a></li>
-                                        <li><a href="index.html#popular-courses">Blog</a></li>
+                                        <li><a href="index.html#products">Products</a></li>
+                                        <li><a href="index.html#projects">Projects</a></li>
+                                        <li><a href="index.html#blog">Blog</a></li>
+                                        <li><a href="index.html#about-me">About</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -129,9 +131,9 @@
                             <h2> AI/ML based Python App and a Dashboard for Education Institutions
                             </h2>
                             <ul class="blog-info-link mt-3 mb-4">
-                                <li><a href="index.html#popular-courses"><i class="fa fa-user"></i> Explainable AI
+                                <li><a href="index.html#products"><i class="fa fa-user"></i> Explainable AI
                                     </a></li>
-                                <li><a href="index.html#popular-courses"><i class="fa fa-user"></i> AI4Education
+                                <li><a href="index.html#products"><i class="fa fa-user"></i> AI4Education
                                     </a></li>
                                 <li><a href="index.html#about-me"><i class="fa fa-user"></i> By: Selvakumar Ulaganathan,
                                         PhD</a></li>
@@ -316,8 +318,8 @@
                                 <p></p>
                             </div> <!-- for spacing  -->
                             <div class="col-sm text-center">
-                                <a href="index.html#popular-projects" class="boxed_btn">
-                                    <h3>Checkout More Projects</h3>
+                                <a href="index.html#products" class="boxed_btn">
+                                    <h3>Checkout More Products</h3>
                                 </a>
                             </div>
 
@@ -366,7 +368,7 @@
                                 Company
                             </h3>
                             <ul>
-                                <li><a href="#about-me">About Us</a></li>
+                                <li><a href="index.html#about-me">About Us</a></li>
                             </ul>
 
                         </div>
@@ -377,7 +379,7 @@
                                 Resources
                             </h3>
                             <ul>
-                                <li><a href="#popular-courses"> Articles</a></li>
+                                <li><a href="index.html#blog"> Articles</a></li>
                             </ul>
                         </div>
                     </div>
