--- a/fire_smoke.html
+++ b/fire_smoke.html
@@ -51,11 +51,12 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a class="" href="index.html#home-page">home</a></li>
-                                        <li><a href="index.html#about-me">About Us</a></li>
+                                        <li><a href="index.html#industries">Industries</a></li>
                                         <li><a href="index.html#services">Services</a></li>
-                                        <li><a href="index.html#popular-projects">Products</a></li>
+                                        <li><a href="index.html#products">Products</a></li>
                                         <li><a href="index.html#projects">Projects</a></li>
-                                        <li><a href="index.html#popular-courses">Blog</a></li>
+                                        <li><a href="index.html#blog">Blog</a></li>
+                                        <li><a href="index.html#about-me">About</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -220,7 +221,7 @@
                             <p></p>
                         </div> <!-- for spacing -->
                         <div class="col-sm text-center">
-                            <a href="index.html#popular-projects" class="boxed_btn">
+                            <a href="index.html#projects" class="boxed_btn">
                                 <h3>Checkout More Projects</h3>
                             </a>
                         </div>
@@ -270,7 +271,7 @@
                                 Company
                             </h3>
                             <ul>
-                                <li><a href="#about-me">About Us</a></li>
+                                <li><a href="index.html#about-me">About Us</a></li>
                             </ul>
 
                         </div>
@@ -281,7 +282,7 @@
                                 Resources
                             </h3>
                             <ul>
-                                <li><a href="#popular-courses"> Articles</a></li>
+                                <li><a href="index.html#blog"> Articles</a></li>
                             </ul>
                         </div>
                     </div>
