--- a/gemini.html
+++ b/gemini.html
@@ -51,10 +51,12 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a class="" href="index.html#home-page">home</a></li>
-                                        <li><a href="index.html#about-me">About Us</a></li>
+                                        <li><a href="index.html#industries">Industries</a></li>
                                         <li><a href="index.html#services">Services</a></li>
-                                        <li><a href="index.html#popular-projects">Products</a></li>
-                                        <li><a href="index.html#popular-courses">Blog</a></li>
+                                        <li><a href="index.html#products">Products</a></li>
+                                        <li><a href="index.html#projects">Projects</a></li>
+                                        <li><a href="index.html#blog">Blog</a></li>
+                                        <li><a href="index.html#about-me">About</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -124,7 +126,7 @@
                         <div class="blog_details">
                             <h2>Exploring Google's Gemini AI: A Leap into Next-Generation AI</h2>
                             <ul class="blog-info-link mt-3 mb-4">
-                                <li><a href="index.html#popular-courses"><i class="fa fa-user"></i> Data & Model
+                                <li><a href="index.html#blog"><i class="fa fa-user"></i> Data & Model
                                         Management
                                     </a></li>
                                 <li><a href="index.html#about-me"><i class="fa fa-user"></i> By: Selvakumar Ulaganathan,
@@ -341,7 +343,7 @@
 
                                 <!-- Read More Articles -->
                                 <div class="col-sm text-center">
-                                    <a href="index.html#popular-courses" class="boxed_btn">
+                                    <a href="index.html#blog" class="boxed_btn">
                                         <h3>Read More Articles</h3>
                                     </a>
                                 </div>
@@ -376,7 +378,7 @@
                                 Company
                             </h3>
                             <ul>
-                                <li><a href="#about-me">About Us</a></li>
+                                <li><a href="index.html#about-me">About Us</a></li>
                             </ul>
 
                         </div>
@@ -387,7 +389,7 @@
                                 Resources
                             </h3>
                             <ul>
-                                <li><a href="#popular-courses"> Articles</a></li>
+                                <li><a href="index.html#blog"> Articles</a></li>
                             </ul>
                         </div>
                     </div>
