--- a/probabilistic_time_series_modeling.html
+++ b/probabilistic_time_series_modeling.html
@@ -51,10 +51,12 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a class="" href="index.html#home-page">home</a></li>
-                                        <li><a href="index.html#about-me">About Us</a></li>
+                                        <li><a href="index.html#industries">Industries</a></li>
                                         <li><a href="index.html#services">Services</a></li>
-                                        <li><a href="index.html#popular-projects">Products</a></li>
-                                        <li><a href="index.html#popular-courses">Blog</a></li>
+                                        <li><a href="index.html#products">Products</a></li>
+                                        <li><a href="index.html#projects">Projects</a></li>
+                                        <li><a href="index.html#blog">Blog</a></li>
+                                        <li><a href="index.html#about-me">About</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -154,7 +156,7 @@
                        <h2>Probabilistic Time Series Modeling with Amazon-MxNet-GluonTS
                        </h2>
                        <ul class="blog-info-link mt-3 mb-4">
-                         <li><a href="index.html#popular-courses"><i class="fa fa-user"></i> Supervised Learning</a></li>
+                         <li><a href="index.html#blog"><i class="fa fa-user"></i> Supervised Learning</a></li>
                          <li><a href="index.html#about-me"><i class="fa fa-user"></i> By: Selvakumar Ulaganthan, PhD</a></li>
                        </ul>
                         <!--<h6>Disclaimer: The views expressed in this article are those of the Author's. They do not necessarily reflect the views of his employer. </h6> -->
@@ -398,7 +400,7 @@ forecasts, ts_it = make_evaluation_predictions(dataset=testing_data, predictor=p
 
                           <!-- for spacing --> <div class=""><p></p><br><p></p></div> <!-- for spacing  -->
                           <div class="col-sm text-center">
-                                <a href="index.html#popular-courses" class="boxed_btn"><h3>Read More Articles</h3></a>
+                                <a href="index.html#blog" class="boxed_btn"><h3>Read More Articles</h3></a>
                             </div>
 
                         
@@ -444,7 +446,7 @@ forecasts, ts_it = make_evaluation_predictions(dataset=testing_data, predictor=p
                                  Company
                              </h3>
                              <ul>
-                                 <li><a href="#about-me">About Us</a></li>
+                                 <li><a href="index.html#about-me">About Us</a></li>
                              </ul>
  
                          </div>
@@ -455,7 +457,7 @@ forecasts, ts_it = make_evaluation_predictions(dataset=testing_data, predictor=p
                                  Resources
                              </h3>
                              <ul>
-                                 <li><a href="#popular-courses"> Articles</a></li>
+                                 <li><a href="index.html#blog"> Articles</a></li>
                              </ul>
                          </div>
                      </div>
